# errgonomic

./: .gitignore  Cargo.toml  README.md
_examples/: hex.rs
examples/: hex.rs  minilang.rs  recursive_lists.rs
src/: lib.rs  prelude.rs
src/combinators/: alphabetic.rs  any.rs  between.rs  compare.rs  consumed.rs  eoi.rs  id.rs  is.rs  many.rs  maybe.rs  mod.rs  numeric.rs  pratt.rs  recovery.rs  separated.rs  sequence.rs  take.rs  whitespace.rs
src/combinators/pratt/: mod.rs  operators.rs  tests.rs  utils.rs
src/parser/: mappings.rs  mod.rs  span.rs  state.rs
src/parser/_input/: mod.rs  underlying.rs
src/parser/errors/: custom.rs  kinds.rs  mod.rs
src/parser/input/: mod.rs  span.rs  underlying.rs
src/parsers/: errors.rs  input.rs  mod.rs  result.rs  span.rs  state.rs
src/parsers/combinators/: id.rs
src/parsers/input/: mod.rs  str.rs
tests/: hex.rs  simple_parser.rs
