[package]
    name        = "errgonomic"
    version     = "0.1.0"
    edition     = "2024"
    authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
    description = "A simple, powerful, and fun combinator parsing library for Rust."

[dependencies]
    # TODO: Use these for nicer errors
    # miette = { version = "^7.5.0", optional = true }

[features]
    # default = ["fancy"]      # WARN: Only for testing!
    # fancy   = ["dep:miette"]
