[package]
    name        = "errgonomic"
    version     = "0.1.0"
    edition     = "2024"
    authors     = ["Ian Pratt <ianjdpratt@gmail.com>"]
    description = "A simple, powerful, and fun combinator parsing library for Rust."

[dependencies]

    # Magical macro blend of `macro_rules!` and proc-macros to generate impls. for 
    # the `any` parser.
    # See: 
    #   - https://docs.rs/eval-macro/latest/eval_macro/
    #   - https://www.reddit.com/r/rust/comments/1j42fgi/media_introducing_eval_macro_a_new_way_to_write/
    eval-macro = "^0.5.0"

    # Fast unicode parsing
    # See:
    #   - https://lemire.me/blog/2020/10/20/ridiculously-fast-unicode-utf-8-validation/
    #   - https://github.com/simdjson/simdjson/blob/master/doc/basics.md#utf-8-validation-alone
    #   - https://github.com/simdutf/simdutf
    #   - https://github.com/rusticstuff/simdutf8
    simdutf8 = { version = "^0.1.5", optional = true }

    # Creates beautiful outputs for error types.
    # See:
    #   - https://docs.rs/miette/latest/miette/
    # TODO: Do this!
    # miette = { version = "^7.5.0", optional = true }

[features]
    # default = ["unicode"]      # WARN: Only for testing!
    unicode = ["dep:simdutf8"]
